--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,46 @@
 {% extends "stylesheet.html" %}
 {% block content %}
-	<dir class="home">
+	<div>
+		<br>
+		<div class="row">
+		  <div class="col l6">
+			<h5>The following students participated on this project: </h5>
+			<ul>
+				<li>Danyal Fatmi</li>
+				<li>Czamantha Bello</li>
+				<li>Julian Alarcon</li>
+				<li>John Marin</li>
+			</ul>
+		  </div>
+		  <div class="col l6">
+			<h5>Project Purpose: </h5>
+			<p>
+				Glow is intended to be an app that allows users to search beauty/makeup products. It should display their product along with price and store location.
+				We intended to add the feature of displaying make up tutorials made by people who match that product.
+			</p>
+		  </div>
+		</div>
+	</div>
+	<div>
+		<div class="row">
+		  <div class="col">
+			<h5 class="center-align">Technologies used in this project:</h5>
+			  <ul>
+				<li>Python</li>
+				<li>Flask</li>
+				<li>MaterializeCSS</li>
+			  </ul>
+		  </div>
+		</div>
+	</div>
+	<div>
 		<fieldset>
 			<form >
 				<legend>Search your favorite makeup brand here!</legend> <br>
   				<input type="text" name="query"><br>
-				<input type="submit" value="Search">
+				<input type="submit" value="Search" class="btn waves-effect waves-light" >
 			</form>
 		</fieldset>
-	</dir>
+	</div>
 {% endblock %}
 
