--- a/templates/stylesheet.html
+++ b/templates/stylesheet.html
@@ -2,23 +2,33 @@
 <html>
 <head>
     <title>Glow </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   </head>
 <body>
-    <header>
-      <div class="container">
-        <h1 class="logo">Glow</h1>
-        <strong><nav>
-            <ul class="menu">
-              <li><a href="{{ url_for('home') }}">Home</a></li>
-            <li><a href="{{ url_for('about') }}">About</a></li>
-          </ul>
-        </nav></strong>
-      </div>
-    </header>
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-     </div>
+  <nav style="background-color: #0288d1;">
+    <div class="nav-wrapper">
+      <a href="{{ url_for('home') }}" class="brand-logo center">GLOW</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        <li><a href="{{ url_for('about') }}">About</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    {% block content %}
+    {% endblock %}
+  </div>
 </body>
 </html>
+
+<!--    <header>-->
+<!--      <div class="container">-->
+<!--        <h1 class="logo">Glow</h1>-->
+<!--        <strong><nav>-->
+<!--            <ul class="menu">-->
+<!--              <li><a href="{{ url_for('home') }}">Home</a></li>-->
+<!--            <li><a href="{{ url_for('about') }}">About</a></li>-->
+<!--          </ul>-->
+<!--        </nav></strong>-->
+<!--      </div>-->
+<!--    </header>-->
