Testing use of jQuery AJAX to POST the form data for future query

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,18 +29,19 @@
 				<li>Python</li>
 				<li>Flask</li>
 				<li>MaterializeCSS</li>
+				  <li>JQuery </li>
 			  </ul>
 		  </div>
 		</div>
 	</div>
-	<div>
-		<fieldset>
-			<form >
-				<legend>Search your favorite makeup brand here!</legend> <br>
-  				<input type="text" name="query"><br>
-				<input type="submit" value="Search" class="btn waves-effect waves-light" >
-			</form>
-		</fieldset>
-	</div>
+	<div class="container">
+
+         <form role="form">
+        <input type="text" id="txtUsername" name="username" placeholder="Search" >
+        <button type="button">Register</button>
+      </form>
+
+
+     </div>
 {% endblock %}
 
