--- a/templates/stylesheet.html
+++ b/templates/stylesheet.html
@@ -3,6 +3,12 @@
 <head>
     <title>Glow </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script
+  src="https://code.jquery.com/jquery-1.9.0.js"
+  integrity="sha256-TXsBwvYEO87oOjPQ9ifcb7wn3IrrW91dhj6EMEtRLvM="
+  crossorigin="anonymous"></script>
+  <script src="static/js/script.js"></script>
+
   </head>
 <body>
   <nav style="background-color: #0288d1;">
