Application is working, form data is being received

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,11 +37,9 @@
 	<div class="container">
 
          <form role="form">
-        <input type="text" id="txtUsername" name="username" placeholder="Search" >
-        <button type="button">Register</button>
+        <input type="text" id="txtquery" name="query" placeholder="Type here" >
+        <button type="button">Search</button>
       </form>
-
-
      </div>
 {% endblock %}
 
