API was integrated, some changes were made to the UI,

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "stylesheet.html" %}
 {% block content %}
-	<div>
+<div xmlns="http://www.w3.org/1999/html">
 		<br>
 		<div class="row">
 		  <div class="col l6">
@@ -41,5 +41,6 @@
         <button type="button">Search</button>
       </form>
      </div>
+
 {% endblock %}
 
